Make suggestions into links

--- a/resources/assets/less/bem/wiki-search-suggestions.less
+++ b/resources/assets/less/bem/wiki-search-suggestions.less
@@ -59,6 +59,10 @@
   &__suggestion-text {
     font-size: 15px;
 
+    &:link, &:visited, &:hover, &:active {
+      color: #ffffff;
+    }
+
     & em {
       font-weight: 700;
       font-style: inherit;
