--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -186,6 +186,7 @@
 @import "bem/login-box";
 @import "bem/logo";
 @import "bem/logo-menu";
+@import "bem/oauth-client-details";
 @import "bem/medals-group";
 @import "bem/mod";
 @import "bem/modding-profile-list";
