Better variable name

--- a/resources/assets/less/bem/forum-title.less
+++ b/resources/assets/less/bem/forum-title.less
@@ -21,10 +21,10 @@
   flex: 1;
 
   &--forum {
-    padding: 10px;
+    padding: @padding-base;
 
     @media @desktop {
-      padding: 20px @padding-big-v4;
+      padding: 20px @padding-base-desktop;
     }
   }
 
