--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -74,13 +74,13 @@
   }
 
   &__row {
-    padding: 0 10px;
+    padding: 0 @padding-base;
     display: flex;
     align-items: center;
 
     @media @desktop {
-      padding-left: @padding-big-v4;
-      padding-right: @padding-big-v4;
+      padding-left: @padding-base-desktop;
+      padding-right: @padding-base-desktop;
     }
 
     &--bar {
