--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -62,7 +62,8 @@
 @padding-wiki-desktop: 40px;
 
 // ┐(ﾟ ヮﾟ)┌
-@padding-big-v4: 50px;
+@padding-base: 10px;
+@padding-base-desktop: 50px;
 
 @gutter-profile-page: 20px;
 @gutter-profile-page-desktop: @gutter-desktop;
