--- a/resources/assets/less/bem/forum-list.less
+++ b/resources/assets/less/bem/forum-list.less
@@ -17,11 +17,11 @@
  */
 
 .forum-list {
-  padding: 10px;
+  padding: @padding-base;
 
   @media @desktop {
-    padding-left: @padding-big-v4;
-    padding-right: @padding-big-v4;
+    padding-left: @padding-base-desktop;
+    padding-right: @padding-base-desktop;
   }
 
   &__button {
