Also add the stripe for topic

--- a/resources/assets/less/bem/forum-item.less
+++ b/resources/assets/less/bem/forum-item.less
@@ -18,35 +18,26 @@
 
 .forum-item {
   @_top: forum-item;
-  @_background-color: @osu-colour-b4;
-  @_background-color-hover: @osu-colour-b3;
   @_content-margin: 5px;
-  @_overflow: @padding-base - 2px;
-  @_overflow-desktop: @padding-base-desktop - 20px;
-  @_stripe-move: 15px;
 
-  ._animate() {
-    transition: 120ms transform, 120ms background-color;
-  }
-
-  padding: @_content-margin (@_overflow - @_content-margin);
-  margin: 2px -@_overflow;
+  padding: @_content-margin (@forum-item-overflow - @_content-margin);
+  margin: 2px -@forum-item-overflow;
   display: flex;
-  ._animate();
+  transition: @forum-item-animate;
 
   .default-border-radius();
-  background-color: @_background-color;
+  background-color: @forum-item-background-color;
   font-size: @font-size--normal;
 
   &:hover {
-    background-color: @_background-color-hover;
+    background-color: @forum-item-background-color-hover;
   }
 
   @media @desktop {
-    margin-left: -@_overflow-desktop;
-    margin-right: -@_overflow-desktop;
-    padding-left: (@_overflow-desktop - @_content-margin);
-    padding-right: (@_overflow-desktop - @_content-margin);
+    margin-left: -@forum-item-overflow-desktop;
+    margin-right: -@forum-item-overflow-desktop;
+    padding-left: (@forum-item-overflow-desktop - @_content-margin);
+    padding-right: (@forum-item-overflow-desktop - @_content-margin);
   }
 
   &__arrow {
@@ -73,7 +64,7 @@
 
     @media @desktop {
       will-change: transform;
-      ._animate();
+      transform: @forum-item-animate;
     }
   }
 
@@ -109,52 +100,6 @@
     .link-hover({
       color: @osu-colour-c1;
     });
-  }
-
-  &__stripe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 25px;
-    padding-right: 5px;
-    height: 100%;
-    overflow: hidden;
-    .center-content();
-    color: transparent;
-
-    &::after {
-      content: '';
-      .full-size();
-      border-radius: @border-radius-base 0 0 @border-radius-base;
-      background-color: @_background-color;
-      top: 0;
-      will-change: transform;
-      ._animate();
-      left: 3px;
-
-      @media @desktop {
-        left: 5px;
-      }
-    }
-
-    &::before {
-      content: '';
-      .full-size();
-      border-radius: @border-radius-base 0 0 @border-radius-base;
-      background-color: @osu-colour-p;
-    }
-
-    .@{_top}:hover & {
-      color: @_background-color-hover;
-
-      &::after {
-        background-color: @_background-color-hover;
-
-        @media @desktop {
-          transform: translateX(@_stripe-move);
-        }
-      }
-    }
   }
 
   &__subforum {
