--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -80,6 +80,13 @@
 @border-radius--nav-avatar: 10px;
 @border-radius--extra: 20px;
 
+@forum-item-overflow: @padding-base - 2px;
+@forum-item-overflow-desktop: @padding-base-desktop - 20px;
+@forum-item-background-color: @osu-colour-b4;
+@forum-item-background-color-hover: @osu-colour-b3;
+@forum-item-animate: all 120ms;
+
+
 // here be z-indexes
 @z-index--header-bg: -1;
 
