--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -138,6 +138,7 @@
 @import "bem/forum-cover-admin-item";
 @import "bem/forum-issue-icon";
 @import "bem/forum-item";
+@import "bem/forum-item-stripe";
 @import "bem/forum-list";
 @import "bem/forum-poll";
 @import "bem/forum-poll-row";
