--- a/resources/assets/less/bem/wiki-main-page.less
+++ b/resources/assets/less/bem/wiki-main-page.less
@@ -17,10 +17,13 @@
  */
 
  .wiki-main-page {
+  background: @osu-colour-b5;
+
   &__blurb {
     font-size: 12px;
     text-align: center;
     font-weight: 300;
+    color: @osu-colour-c1;
 
     padding-top: 30px;
   }
