--- a/resources/assets/less/bem/wiki-search-suggestions.less
+++ b/resources/assets/less/bem/wiki-search-suggestions.less
@@ -19,7 +19,7 @@
  .wiki-search-suggestions {
   position: absolute;
   width: 100%;
-  background-color: #222;
+  background-color: @osu-colour-d5;
 
   padding: 20px 0;
   margin-top: 3px;
@@ -35,7 +35,7 @@
 
   &__prompt {
     font-size: 12px;
-    color: #cccccc;
+    color: @osu-colour-c2;
     text-align: center;
   }
 
@@ -59,9 +59,7 @@
   &__suggestion-text {
     font-size: 15px;
 
-    &:link, &:visited, &:hover, &:active {
-      color: #ffffff;
-    }
+    .link-default();
 
     & em {
       font-weight: 700;
@@ -71,7 +69,11 @@
     &--path {
       font-size: 13px;
       font-weight: 300;
-      color: #bbb;
+      color: @osu-colour-c2;
+
+      &:hover {
+        color: @osu-colour-c2;
+      }
 
       padding-left: 20px;
     }
