Layout fixes for mobile

--- a/resources/assets/less/bem/supporter-eyecatch.less
+++ b/resources/assets/less/bem/supporter-eyecatch.less
@@ -67,7 +67,10 @@
     &--main {
       font-size: 26px;
       font-weight: normal;
-      margin-top: 40px;
+
+      @media @desktop {
+        margin-top: 40px;
+      }
     }
 
     &--sub-1 {
