--- a/resources/assets/less/bem/supporter-quote.less
+++ b/resources/assets/less/bem/supporter-quote.less
@@ -25,6 +25,10 @@
   font-size: @font-size--normal;
   font-style: italic;
 
+  @media @mobile {
+    padding: 30px;
+  }
+
   &__content {
     margin: 0;
     padding: 0;
