--- a/resources/assets/less/bem/supporter-perk-list.less
+++ b/resources/assets/less/bem/supporter-perk-list.less
@@ -18,17 +18,29 @@
 
 .supporter-perk-list {
   @top: supporter-perk-list;
-  padding: 30px;
+  padding: 20px 20px 0;
+
+  @media @mobile {
+    padding: 15px;
+  }
+
+  &--image-list {
+    @media @desktop {
+      padding: 20px 40px;
+    }
+  }
 
   &__list {
-    margin: -5px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 
     .@{top}--image-list & {
       flex-direction: column;
-      align-items: center;
+
+      @media @desktop {
+        align-items: center;
+      }
     }
   }
 }
