Add links to relevant sections in "why support" section

--- a/resources/assets/less/bem/supporter-perk-item.less
+++ b/resources/assets/less/bem/supporter-perk-item.less
@@ -163,6 +163,12 @@
     }
   }
 
+  &__link {
+    .link-default();
+    display: block;
+    margin-top: 10px;
+  }
+
   &__meta {
     .@{top}--image & {
       display: flex;
