Fix breadcrumb min-height

--- a/resources/assets/less/bem/page-mode-v2.less
+++ b/resources/assets/less/bem/page-mode-v2.less
@@ -31,7 +31,11 @@
 
   @media @desktop {
     padding: 0 (@gutter-desktop - 10px);
-    //min-height: @_bar-active-height;
+    min-height: @_bar-active-height;
+  }
+
+  &--empty {
+    min-height: 0;
   }
 
   &::after {
