Cleanups and name fixes

--- a/resources/assets/less/bem/supporter-eyecatch.less
+++ b/resources/assets/less/bem/supporter-eyecatch.less
@@ -44,7 +44,7 @@
     padding: 50px;
     text-align: center;
     height: 100%;
-    margin: 10px 0px;
+    margin: 10px 0;
     border-radius: 15px;
 
     @media @mobile {
