Split hero perk type into seperate class

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -317,6 +317,7 @@
 @import "bem/supporter-icon";
 @import "bem/supporter-perk-item";
 @import "bem/supporter-perk-list";
+@import "bem/supporter-perk-list-hero";
 @import "bem/supporter-promo";
 @import "bem/supporter-quote";
 @import "bem/supporter-status";
