Split image perk types into seperate class

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -318,6 +318,7 @@
 @import "bem/supporter-perk-item";
 @import "bem/supporter-perk-list";
 @import "bem/supporter-perk-list-hero";
+@import "bem/supporter-perk-list-image";
 @import "bem/supporter-promo";
 @import "bem/supporter-quote";
 @import "bem/supporter-status";
