Rename supporter-perk-item to supporter-perk-list-group to be more consistent

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -315,8 +315,8 @@
 @import "bem/supporter-eyecatch";
 @import "bem/supporter-heart";
 @import "bem/supporter-icon";
-@import "bem/supporter-perk-item";
 @import "bem/supporter-perk-list";
+@import "bem/supporter-perk-list-group";
 @import "bem/supporter-perk-list-hero";
 @import "bem/supporter-perk-list-image";
 @import "bem/supporter-promo";
