Apparently can use the one from fontawesome itself

--- a/resources/assets/less/bem/header-nav-v4.less
+++ b/resources/assets/less/bem/header-nav-v4.less
@@ -33,7 +33,7 @@
     flex: none;
 
     & + &::before {
-      .font-awesome();
+      .fas();
       content: "\f105"; // fa-angle-right
 
       margin-right: 5px;
