more styling updates

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -114,6 +114,14 @@
     }
   }
 
+  &--danger {
+    background-color: @red;
+
+    &:hover {
+      background-color: @red-light;
+    };
+  }
+
   &--download-landing {
     .default-box-shadow();
     .default-text-shadow();
