--- a/resources/assets/less/bem/oauth-client.less
+++ b/resources/assets/less/bem/oauth-client.less
@@ -60,6 +60,10 @@
     font-size: @font-size--title-small;
     margin-bottom: 5px;
     color: white;
+
+    &--link {
+      .reset-input();
+    }
   }
 
   &__scopes {
