enable modal blackout; more style updates

--- a/resources/assets/less/bem/oauth-client-details.less
+++ b/resources/assets/less/bem/oauth-client-details.less
@@ -25,6 +25,18 @@
   display: flex;
   flex-direction: column;
 
-  background-color: black;
+  background-color: @osu-colour-b5;
   color: white;
+
+  &__group {
+    margin: 10px 0;
+  }
+
+  &__label {
+    color: @osu-colour-f1;
+  }
+
+  &__value {
+
+  }
 }
