--- a/resources/assets/less/bem/page-mode-v2.less
+++ b/resources/assets/less/bem/page-mode-v2.less
@@ -34,6 +34,7 @@
     min-height: @_bar-active-height;
   }
 
+  // the supporter page is using this for the coloured separator line
   &--empty {
     min-height: 0;
   }
