some button spacing

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -231,6 +231,10 @@
     margin: 0 5px;
   }
 
+  &--settings-oauth {
+    padding: 7px 10px;
+  }
+
   &--wrap-text {
     white-space: normal;
   }
