--- a/resources/assets/less/bem/oauth-client-details.less
+++ b/resources/assets/less/bem/oauth-client-details.less
@@ -31,6 +31,14 @@
   background-color: @osu-colour-b4;
   color: white;
 
+  &__buttons {
+    display: grid;
+    grid-gap: 5px;
+    min-width: 200px;
+    margin: 10px 0;
+    align-self: center;
+  }
+
   &__group {
     display: flex;
     flex-direction: column;
