Remove shocking forum header

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -38,7 +38,8 @@
     opacity: 0.5;
 
     .@{_top}--forums-index & {
-      .at2x-simple('/images/headers/forum-top.png');
+//    disabled because it is wrong
+//    .at2x-simple('/images/headers/forum-top.png');
     }
 
     .@{_top}--forums-show & {
