Fix pointer events for anchor target

--- a/resources/assets/less/utilities.less
+++ b/resources/assets/less/utilities.less
@@ -40,6 +40,10 @@
 // that block each other.
 .u-has-anchor {
   position: static;
+
+  &--no-event {
+    pointer-events: none;
+  }
 }
 
 .u-hidden {
