Add new forum index cover

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -38,8 +38,7 @@
     opacity: 0.5;
 
     .@{_top}--forums-index & {
-//    disabled because it is wrong
-//    .at2x-simple('/images/headers/forum-top.png');
+      .at2x-simple('/images/headers/forum-index.jpg');
     }
 
     .@{_top}--forums-show & {
