Fix background color of header area

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -49,12 +49,7 @@
   &__bg-container {
     .full-size();
     .default-box-shadow();
-
-    &::before {
-      .full-size();
-      content: '';
-      background-image: linear-gradient(to bottom, #111 40%, #222 100%);
-    }
+    background-color: @osu-colour-d5;
   }
 
   &__content {
