--- a/resources/assets/less/bem/supporter-perk-list-group.less
+++ b/resources/assets/less/bem/supporter-perk-list-group.less
@@ -55,8 +55,8 @@
     width: 500px;
     height: 100px;
     border-radius: 10px;
-    overflow: hidden;
     flex-shrink: 0;
+    object-fit: cover;
 
     @media @mobile {
       align-self: center;
