--- a/resources/assets/less/bem/supporter-perk-list.less
+++ b/resources/assets/less/bem/supporter-perk-list.less
@@ -18,7 +18,7 @@
 
 .supporter-perk-list {
   @top: supporter-perk-list;
-  padding: 20px 20px 0;
+  padding: 20px;
 
   @media @mobile {
     padding: 15px;
