Use "Inter" for content font

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -22,6 +22,7 @@
 @import "@{node_root}/@fortawesome/fontawesome-free/less/solid";
 @import "@{node_root}/@fortawesome/fontawesome-free/less/regular";
 @import "@{node_root}/@fortawesome/fontawesome-free/less/brands";
+@import "~inter-ui/inter.css";
 
 @import "@{node_root}/bootstrap/less/bootstrap";
 @import 'bootstrap-overrides';
