--- a/resources/assets/less/bem/beatmap-discussion-new.less
+++ b/resources/assets/less/bem/beatmap-discussion-new.less
@@ -65,6 +65,7 @@
 
   &__message {
     .content-font();
+    color: @osu-colour-f1;
     flex: 1;
     padding-left: 10px;
     font-size: @font-size--title-small-2;
