Rename beatmapset-favourites to user-list-popup for reusability

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -72,7 +72,6 @@
 @import "bem/beatmapset-discussion-message";
 @import "bem/beatmapset-event";
 @import "bem/beatmapset-events";
-@import "bem/beatmapset-favourites";
 @import "bem/beatmapset-header";
 @import "bem/beatmapset-hype";
 @import "bem/beatmapset-info";
@@ -344,6 +343,7 @@
 @import "bem/user-home";
 @import "bem/user-home-beatmapset";
 @import "bem/user-list";
+@import "bem/user-list-popup";
 @import "bem/user-name";
 @import "bem/user-profile-header";
 @import "bem/user-quick";
