--- a/resources/assets/less/bem/user-list-popup.less
+++ b/resources/assets/less/bem/user-list-popup.less
@@ -16,7 +16,7 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.beatmapset-favourites {
+.user-list-popup {
   @avatar-size: 32px;
   @avatar-margin: 1px;
   @columns: 10;
