Show list of votes when hovering upvote/downvote button

--- a/resources/assets/less/bem/user-list-popup.less
+++ b/resources/assets/less/bem/user-list-popup.less
@@ -37,6 +37,10 @@
     max-width: ((@avatar-size + 2*@avatar-margin) * @columns-mobile) + 20px;
   }
 
+  &__title {
+    margin-bottom: 10px;
+  }
+
   &__user {
     .default-border-radius();
     display: inline-block;
