Delete unused classes

--- a/resources/assets/less/bem/landing-middle-buttons.less
+++ b/resources/assets/less/bem/landing-middle-buttons.less
@@ -35,15 +35,7 @@
     }
 
     &--blog {
-      .at2x-simple('/images/landing/button-blog.png');
-    }
-
-    &--store {
-      .at2x-simple('/images/landing/button-store.png');
-    }
-
-    &--support {
-      .at2x-simple('/images/landing/button-support.png');
+      .at2x-simple("/images/landing/button-blog.png");
     }
   }
 }
