--- a/resources/assets/less/bem/landing-middle-buttons.less
+++ b/resources/assets/less/bem/landing-middle-buttons.less
@@ -35,7 +35,7 @@
     }
 
     &--blog {
-      .at2x-simple("/images/landing/button-blog.png");
+      .at2x-simple('/images/landing/button-blog.png');
     }
   }
 }
