--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -26,7 +26,6 @@
 @import "bem/admin-menu-item";
 @import "bem/artist";
 @import "bem/artist-link-button";
-@import "bem/authorized-client";
 @import "bem/avatar";
 @import "bem/avatar-ribbon";
 @import "bem/back-to-top";
@@ -187,6 +186,7 @@
 @import "bem/login-box";
 @import "bem/logo";
 @import "bem/logo-menu";
+@import "bem/oauth-client-details";
 @import "bem/medals-group";
 @import "bem/mod";
 @import "bem/modding-profile-list";
@@ -217,6 +217,7 @@
 @import "bem/notification-popup-item";
 @import "bem/notification-popup-item-group";
 @import "bem/notification-type-group";
+@import "bem/oauth-client";
 @import "bem/oauth-form";
 @import "bem/oauth-scopes";
 @import "bem/osu-checkbox";
