Style code block to be dark in comments

--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -204,6 +204,18 @@
     a {
       .link-default();
     }
+
+    pre {
+      background-color: @osu-colour-b6;
+      color: @osu-colour-l1;
+      border: none;
+      border-radius: 0px;
+
+      code {
+        border: none;
+        padding: 0px;
+      }
+    }
   }
 
   &__replies {
