--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -219,7 +219,6 @@
 @import "bem/notification-type-group";
 @import "bem/oauth-form";
 @import "bem/oauth-scopes";
-@import "bem/osu-checkbox";
 @import "bem/osu-layout";
 @import "bem/osu-md";
 @import "bem/osu-nav";
@@ -227,6 +226,7 @@
 @import "bem/osu-page-header";
 @import "bem/osu-page-header-v2";
 @import "bem/osu-page-header-v3";
+@import "bem/osu-switch-v2";
 @import "bem/osu-table";
 @import "bem/page-contents";
 @import "bem/page-extra";
