--- a/resources/assets/less/layout.less
+++ b/resources/assets/less/layout.less
@@ -36,6 +36,7 @@
   --font-default-zh: @font-default-zh;
   --font-default-zh-tw: @font-default-zh-tw;
   --font-content: @font-content;
+  --font-content-inter: @font-content-inter;
 }
 
 html, body {
